register missing addon packets